# vrclub

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  ruff.toml
alembic/: env.py
alembic/versions/: 30e8698e4213_new_phone_field.py  3a9861cbff62_add_user_and_role_models.py  62b3bc335c02_change_code_models.py  cbe6963f000e_new_user_field.py
backend/: Dockerfile  admin_models.py  main.py
backend/core/: config.py  database.py
backend/models/: user.py
frontend/: Dockerfile
nginx/: Dockerfile  default.conf
