[project]
name = "vr-club"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = {version = ">=0.115.6,<0.116.0", extras = ["all"]}
sqlalchemy = ">=2.0.36,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.14.0,<2.0.0"
aiosqlite = ">=0.20.0,<0.21.0"
sqladmin = "^0.20.1"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
black = "^24.10.0"

# настройки для Black форматтера
[tool.black]
line-length = 120
target-version = ['py312']
exclude = "((.eggs | .git | .pytest_cache | build | dist))"